# dora_control

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
assets/trossen_mobile/: README.md
assets/trossen_mobile/model/mobile_ai/: mobile_ai.xml
assets/trossen_mobile/scenes/: cart.yaml
assets/trossen_stationary/model/meshes/: cam_high_mount_link.stl  cam_low_mount_link.stl  caster_swivel.stl  caster_wheel.stl  link_6.stl  mobile_base_link.stl  tabletop_link.stl  wheel.stl
assets/trossen_stationary/model/stationary_ai/: README.md  scene.xml  scene_forward.xml  scene_joint.xml  scene_mocap.xml  scene_stationary_ai_pick_place.xml  stationary_ai.xml  stationary_ai_forward.xml  stationary_ai_mocap.xml
assets/trossen_stationary/scenes/: workstation.yaml  workstation_forward.yaml
assets/ur5e_dual/: README.md
assets/ur5e_dual/model/: build_scene.py  ur5e_dual.xml
assets/ur5e_dual/scenes/: workstation_ur5e.yaml
dataflows/: README.md  remote_trossen_web.yml  remote_ur5e_from_trossen.yml  remote_ur5e_web.yml  trossen_mobile_mujoco.yml  trossen_mobile_remote_web.yml  trossen_real.yml  trossen_sim.yml  trossen_stationary_genesis.yml  trossen_stationary_mujoco.yml  trossen_stationary_real.yml  trossen_stationary_remote_web.yml  ur5e_dual_from_trossen_mobile.yml  ur5e_dual_mujoco.yml  ur5e_dual_real.yml  ur5e_dual_remote_web.yml  ur5e_real.yml  ur5e_sim.yml
dataflows/modules/: camera_rig_module.yml  trossen_mobile_rig_module.yml  trossen_pair_module.yml  trossen_stationary_rig_module.yml  trossen_wxai_pair_module.yml  ur5e_pair_module.yml
dataflows/robot_envs/: trossen-1.env.example  trossen-mobile.env.example  ur5-corner.env.example
dataflows/tests/: qos_driver.py  qos_probe.py  scripted_driver.py  test_smoke.py
dataflows/zenoh/: operator-localhost.json5  operator-trossen-1.json5  operator.json5.example  robot.json5  robot.json5.example
docs/: message_formats.md  node_development.md
docs/plans/: startup-homing.md  teleop-module.md
nodes/genesis/: README.md  pyproject.toml
nodes/genesis/genesis_node/: __init__.py  main.py  node_config.py  sim.py
nodes/genesis/genesis_node/modes/: __init__.py  sim.py
nodes/lerobot/: README.md  pyproject.toml
nodes/lerobot/lerobot_node/: __init__.py  main.py  node_config.py
nodes/lerobot/lerobot_node/modes/: __init__.py  record.py
nodes/manager/: README.md  pyproject.toml
nodes/manager/manager/: __init__.py  main.py  node_config.py
nodes/manager/manager/modes/: __init__.py  teleop.py
nodes/mujoco-sim/: README.md  pyproject.toml
nodes/mujoco-sim/mujoco_sim/: __init__.py  main.py  node_config.py  sim.py
nodes/mujoco-sim/mujoco_sim/modes/: __init__.py  sim.py
nodes/opencv-camera/: README.md  pyproject.toml
nodes/opencv-camera/opencv_camera/: __init__.py  main.py  node_config.py
nodes/opencv-camera/opencv_camera/modes/: __init__.py  stream.py
nodes/pinocchio/: README.md  pyproject.toml
nodes/pinocchio/pinocchio_node/: __init__.py  main.py  model.py  node_config.py
nodes/pinocchio/pinocchio_node/modes/: __init__.py  control.py
nodes/pinocchio/tests/: test_control_unit.py
nodes/realsense-camera/: README.md  pyproject.toml
nodes/realsense-camera/realsense_camera/: __init__.py  main.py  node_config.py
nodes/realsense-camera/realsense_camera/modes/: __init__.py  stream.py
nodes/rerun/: README.md  pyproject.toml
nodes/rerun/rerun_node/: __init__.py  main.py  node_config.py  robot3d.py
nodes/rerun/rerun_node/modes/: __init__.py  record.py  visualize.py
nodes/retarget/: README.md  pyproject.toml
nodes/retarget/retarget_node/: __init__.py  main.py  node_config.py
nodes/retarget/retarget_node/modes/: __init__.py  follow.py
nodes/retarget/tests/: test_follow_unit.py
nodes/sync/: README.md  pyproject.toml
nodes/sync/sync_node/: __init__.py  main.py  node_config.py
nodes/sync/sync_node/modes/: __init__.py  collect.py
nodes/trossen-robot/: README.md  pyproject.toml
nodes/trossen-robot/trossen_robot/: conversions.py  driver.py  main.py  node_config.py
nodes/trossen-robot/trossen_robot/modes/: __init__.py  follower.py  leader.py
nodes/ur5e-robot/: README.md  pyproject.toml
nodes/ur5e-robot/ur5e_robot/: conversions.py  driver.py  loop.py  main.py  node_config.py  robotiq_gripper.py
nodes/ur5e-robot/ur5e_robot/modes/: __init__.py  follower.py
nodes/web-controller/: README.md  pyproject.toml
nodes/web-controller/web_controller/: __init__.py  main.py  node_config.py
nodes/web-controller/web_controller/modes/: __init__.py  episode.py  manual.py
scripts/: build-dora.sh  check.sh
