[project]
name = "manager"
version = "0.0.0"
description = "Dora node owning the program lifecycle as an explicit state machine: consumes node `state` events and broadcasts `program_state`."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dora-rs",
    "pyarrow",
    "pydantic-settings",
    "python-statemachine",
]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
manager = "manager.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manager"]

[tool.uv.sources]
# Pinned 1.0.0-rc1 commit (kill->orphan->CPU-spin + macOS run-hang fixes);
# no PyPI wheel exists past 0.5.0. CLI comes from scripts/build-dora.sh.
dora-rs = { git = "https://github.com/dora-rs/dora", rev = "8556977ed2c4f56624e08b90dfc7dc8f54897bd9", subdirectory = "apis/python/node" }
