[project]
name = "mujoco-sim"
version = "0.0.0"
description = "MuJoCo physics simulation of a multi-arm cell, driven by joint targets (a fast local alternative to the genesis node; same scene descriptor + stream interface)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dora-rs",
    "pyarrow",
    "pydantic-settings",
    "mujoco",
    "numpy",
    "scipy",
    "opencv-python",
    "pyyaml",
]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
mujoco-sim = "mujoco_sim.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mujoco_sim"]

[tool.uv.sources]
# Pinned 1.0.0-rc1 commit (kill->orphan->CPU-spin + macOS run-hang fixes);
# no PyPI wheel exists past 0.5.0. CLI comes from scripts/build-dora.sh.
dora-rs = { git = "https://github.com/dora-rs/dora", rev = "8556977ed2c4f56624e08b90dfc7dc8f54897bd9", subdirectory = "apis/python/node" }
