[project]
name = "pinocchio-ik-safety"
version = "0.0.0"
description = "Whole-robot IK + collision safety gate (Pinocchio). Cartesian/joint commands in, safe joint targets out."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dora-rs",
    "pyarrow",
    "pydantic-settings",
    "pin",
    "pyyaml",
    "numpy",
    "scipy",
]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
pinocchio-node = "pinocchio_node.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pinocchio_node"]

[tool.uv.sources]
# Pinned 1.0.0-rc1 commit (kill->orphan->CPU-spin + macOS run-hang fixes);
# no PyPI wheel exists past 0.5.0. CLI comes from scripts/build-dora.sh.
dora-rs = { git = "https://github.com/dora-rs/dora", rev = "8556977ed2c4f56624e08b90dfc7dc8f54897bd9", subdirectory = "apis/python/node" }
