[project]
name = "ur5e-robot"
version = "0.0.0"
description = "Real bimanual UR5e workstation arm (UR5e via ur_rtde + Robotiq 2F-85), mirroring the sim stream interface."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dora-rs",
    "pyarrow",
    "pydantic-settings",
    # Needs CMake + Boost to build from source (no macOS wheel): skip there so the
    # project still syncs and the unit tests run; the SDK import is isolated to driver.py.
    "ur-rtde; sys_platform != 'darwin'",
    "scipy",
    "numpy",
]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
ur5e-robot = "ur5e_robot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ur5e_robot"]

[tool.uv.sources]
# Same pinned dora 1.0.0-rc1 commit as the other nodes (see scripts/build-dora.sh).
dora-rs = { git = "https://github.com/dora-rs/dora", rev = "8556977ed2c4f56624e08b90dfc7dc8f54897bd9", subdirectory = "apis/python/node" }
