[project]
name = "web-controller"
version = "0.0.0"
description = "Dora node serving a web page to manually set robot setpoints (TCP target, gripper) for testing dataflows without a teleop device."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dora-rs",
    "pyarrow",
    "pydantic-settings",
    "nicegui",       # pure-Python control-panel UI (FastAPI-based)
    "fastapi",       # REST control surface (+ what nicegui mounts onto)
    "uvicorn",
    "scipy",
    "pyyaml",        # read the scene descriptor's command layout
]

[dependency-groups]
dev = ["pytest", "httpx"]

[project.scripts]
web-controller = "web_controller.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web_controller"]

[tool.uv.sources]
# Pinned 1.0.0-rc1 commit (kill->orphan->CPU-spin + macOS run-hang fixes);
# no PyPI wheel exists past 0.5.0. CLI comes from scripts/build-dora.sh.
dora-rs = { git = "https://github.com/dora-rs/dora", rev = "8556977ed2c4f56624e08b90dfc7dc8f54897bd9", subdirectory = "apis/python/node" }
